--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "@react-native-community/cli": "^20.0.2",
     "@react-native/metro-config": "^0.82.1",
     "@testing-library/react-native": "^12.9.0",
+    "@types/geojson": "^7946.0.16",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.19.21",
     "@types/react": "~19.1.10",
