--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "expo-blur": "~15.0.7",
     "expo-camera": "~17.0.8",
     "expo-constants": "~18.0.9",
+    "expo-crypto": "~15.0.7",
     "expo-dev-client": "^6.0.15",
     "expo-device": "~8.0.9",
     "expo-font": "~14.0.8",
@@ -69,6 +70,7 @@
     "expo-modules-autolinking": "^3.0.15",
     "expo-notifications": "~0.32.12",
     "expo-router": "~6.0.12",
+    "expo-secure-store": "~15.0.7",
     "expo-speech": "~14.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
