feat: Integrate Sentry for error tracking and performance monitoring
- Added Sentry configuration in .mcp.json for server integration.
- Created SENTRY_SETUP.md for comprehensive setup instructions.
- Installed Sentry SDK and dependencies for React Native.
- Implemented early initialization of Sentry in entry.ts to capture startup errors.
- Enhanced Sentry configuration in utils/sentry.ts with TypeScript support and environment-aware settings.
- Updated app.config.ts to include environment variables for Sentry.
- Documented usage examples for capturing exceptions, messages, breadcrumbs, and user context.
- Established best practices for data privacy and error severity.
- Included setup instructions for production and monitoring alerts.
- Ensured compliance with GDPR, COPPA, and CCPA regulations.

--- a/package.json
+++ b/package.json
@@ -51,8 +51,10 @@
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/native": "^7.1.19",
+    "@sentry/react-native": "~7.2.0",
     "@tanstack/react-query": "^5.90.5",
     "expo": "^54.0.13",
+    "expo-application": "~7.0.7",
     "expo-audio": "^1.0.13",
     "expo-blur": "~15.0.7",
     "expo-camera": "~17.0.8",
@@ -77,6 +79,7 @@
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
     "expo-task-manager": "~14.0.7",
+    "expo-updates": "~29.0.12",
     "expo-web-browser": "~15.0.8",
     "glob": "^9.3.1",
     "gtfs-realtime-bindings": "^1.1.1",
