Add initial documentation for Transit Proxy, Compliance Roadmap, and Kid-Friendly Map privacy policies
- Introduced Transit Proxy documentation detailing server setup and client hook usage.
- Added a comprehensive Compliance & Privacy Roadmap outlining objectives, timelines, and responsibilities for COPPA and GDPR alignment.
- Created a strategic summary for the Kid-Friendly Map, assessing market gaps, roadmap comparisons, and tech stack evaluations.
- Drafted a Data Handling Checklist for privacy audits and feature design reviews.
- Developed a Privacy Policy draft detailing data collection, usage, and guardian rights.
- Compiled Terms of Service draft outlining user responsibilities, acceptable use, and legal disclaimers.

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "navikid-backend",
   "version": "1.0.0",
-  "description": "Privacy-first family location tracking backend for NaviKid",
+  "description": "Backend service for MapMuse, a family adventure and discovery application.",
   "main": "dist/index.js",
   "scripts": {
     "dev": "tsx watch src/index.ts",
@@ -19,12 +19,14 @@
     "format:check": "prettier --check \"src/**/*.ts\""
   },
   "keywords": [
-    "location-tracking",
-    "family-safety",
-    "privacy-first",
+    "maps",
+    "location",
+    "discovery",
+    "family",
+    "adventure",
     "geofencing"
   ],
-  "author": "NaviKid Team",
+  "author": "MapMuse Team",
   "license": "MIT",
   "dependencies": {
     "@fastify/cors": "^9.0.1",
