feat: Integrate Supabase for authentication, location tracking, and safety features
- Updated package dependencies to include Supabase and related libraries.
- Implemented authService for user registration, login, and child account management.
- Created locationService for tracking user locations and storing them in Supabase.
- Developed mapService to handle safe locations and route management.
- Added offlineService to manage operations when the app is offline.
- Introduced realtimeService for subscribing to child location updates and safety alerts.
- Implemented safetyService for creating safe locations and managing safety alerts.
- Created transitService for fetching nearby transit options and saving routes.
- Established a supabase.js file for initializing Supabase client with AsyncStorage.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,9 @@
   "jestrunner.jestCommandLine": "npm test --",
   "jest.pathToJest": "node_modules/.bin/jest",
   "jest.jestCommandLine": "npm test --",
-  "jest.enabled": true
+  "jest.enabled": true,
+  "python.analysis.typeCheckingMode": "standard",
+  "python.analysis.diagnosticSeverityOverrides": {
+    "reportMissingImports": "warning",
+  }
 }
