--- a/package.json
+++ b/package.json
@@ -48,10 +48,11 @@
     "@gorhom/bottom-sheet": "^5.2.6",
     "@maplibre/maplibre-react-native": "^10.2.1",
     "@nkzw/create-context-hook": "^1.1.0",
-    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/native": "^7.1.19",
     "@sentry/react-native": "~7.2.0",
+    "@supabase/supabase-js": "^2.81.1",
     "@tanstack/react-query": "^5.90.5",
     "expo": "^54.0.13",
     "expo-application": "~7.0.7",
@@ -95,6 +96,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
+    "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "0.21.0",
     "react-native-webview": "13.15.0",
     "react-native-worklets": "^0.5.1",
