chore: add lint wrapper with timeout and use it for npm lint

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "test:fast": "npm run test:logic",
     "test:full": "npm run test:logic && jest __tests__",
     "test:concurrent": "bash ./scripts/run-tests-concurrent.sh",
-    "lint": "npx eslint \"**/*.{ts,tsx}\" --max-warnings=0",
+  "lint": "node ./scripts/lint-with-timeout.js",
+  "lint:timed": "node ./scripts/lint-with-timeout.js",
     "format:check": "npx prettier --check \"**/*.{ts,tsx,json,md}\"",
     "perf-check": "node ./tools/perfCheck.cjs",
     "demo:routing": "expo start --dev-client",
