--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "test:fast": "npm run test:logic",
     "test:full": "npm run test:logic && jest __tests__",
     "test:concurrent": "bash ./scripts/run-tests-concurrent.sh",
-  "lint": "node ./scripts/lint-with-timeout.js",
-  "lint:timed": "node ./scripts/lint-with-timeout.js",
+  "lint": "node ./scripts/lint-with-timeout.cjs",
+  "lint:timed": "node ./scripts/lint-with-timeout.cjs",
     "format:check": "npx prettier --check \"**/*.{ts,tsx,json,md}\"",
     "perf-check": "node ./tools/perfCheck.cjs",
     "demo:routing": "expo start --dev-client",
