--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "test:concurrent": "bash ./scripts/run-tests-concurrent.sh",
   "lint": "node ./scripts/lint-with-timeout.cjs",
   "lint:timed": "node ./scripts/lint-with-timeout.cjs",
-    "format:check": "npx prettier --check \"**/*.{ts,tsx,json,md}\"",
+  "lint:fast": "LINT_TIMEOUT_MS=60000 node ./scripts/lint-with-timeout.cjs --rule 'prettier/prettier:0' --rule 'react/jsx-filename-extension:0'",
+  "lint:full": "LINT_TIMEOUT_MS=180000 node ./scripts/lint-with-timeout.cjs",
+  "format:check": "npx prettier --check \"**/*.{ts,tsx,json,md}\"",
+  "format:check:ci": "npx prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "perf-check": "node ./tools/perfCheck.cjs",
     "demo:routing": "expo start --dev-client",
     "demo:offline": "node demo-offline-monitoring.js",
