--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "test:concurrent": "bash ./scripts/run-tests-concurrent.sh",
   "lint": "node ./scripts/lint-with-timeout.cjs",
   "lint:timed": "node ./scripts/lint-with-timeout.cjs",
-  "lint:fast": "LINT_TIMEOUT_MS=60000 node ./scripts/lint-with-timeout.cjs --rule 'prettier/prettier:0' --rule 'react/jsx-filename-extension:0'",
+  "lint:fast": "LINT_TIMEOUT_MS=60000 node ./scripts/lint-with-timeout.cjs \"app/**/*.{ts,tsx,js,jsx}\" \"components/**/*.{ts,tsx,js,jsx}\" \"hooks/**/*.{ts,tsx,js,jsx}\" \"utils/**/*.{ts,tsx,js,jsx}\" --cache --max-warnings=0",
   "lint:full": "LINT_TIMEOUT_MS=180000 node ./scripts/lint-with-timeout.cjs",
   "format:check": "npx prettier --check \"**/*.{ts,tsx,json,md}\"",
   "format:check:ci": "npx prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\"",
