feat(types): extend FastifyRequest to include user payload from JWT

--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "test:fast": "npm run test:logic",
     "test:full": "npm run test:logic && jest __tests__",
     "test:concurrent": "bash ./scripts/run-tests-concurrent.sh",
-  "lint": "node ./scripts/lint-with-timeout.cjs",
-  "lint:timed": "node ./scripts/lint-with-timeout.cjs",
-  "lint:fast": "LINT_TIMEOUT_MS=60000 node ./scripts/lint-with-timeout.cjs --rule 'prettier/prettier:0' --rule 'react/jsx-filename-extension:0'",
-  "lint:full": "LINT_TIMEOUT_MS=180000 node ./scripts/lint-with-timeout.cjs",
-  "format:check": "npx prettier --check \"**/*.{ts,tsx,json,md}\"",
-  "format:check:ci": "npx prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\"",
+    "lint": "node ./scripts/lint-with-timeout.cjs",
+    "lint:timed": "node ./scripts/lint-with-timeout.cjs",
+    "lint:fast": "LINT_TIMEOUT_MS=60000 node ./scripts/lint-with-timeout.cjs --rule 'prettier/prettier:0' --rule 'react/jsx-filename-extension:0'",
+    "lint:full": "LINT_TIMEOUT_MS=180000 node ./scripts/lint-with-timeout.cjs",
+    "format:check": "npx prettier --check \"**/*.{ts,tsx,json,md}\"",
+    "format:check:ci": "npx prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "perf-check": "node ./tools/perfCheck.cjs",
     "demo:routing": "expo start --dev-client",
     "demo:offline": "node demo-offline-monitoring.js",
@@ -64,6 +64,7 @@
     "expo": "^54.0.13",
     "expo-application": "~7.0.7",
     "expo-audio": "^1.0.13",
+    "expo-battery": "~10.0.7",
     "expo-blur": "~15.0.7",
     "expo-camera": "~17.0.8",
     "expo-constants": "~18.0.9",
