--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,9 @@
     "start": "node dist/index.js",
     "db:migrate": "tsx src/scripts/migrate.ts",
     "db:seed": "tsx src/scripts/seed.ts",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
+  "test": "jest",
+  "test:watch": "jest --watch",
+  "test:coverage": "jest --coverage --passWithNoTests",
     "test:integration": "jest --testMatch='**/*.integration.test.ts'",
     "typecheck": "tsc --noEmit",
     "lint": "eslint src",
