--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -238,6 +238,11 @@ jobs:
         env:
           DATABASE_URL: postgresql://postgres:test_password@localhost:5432/navikid_test
           NODE_ENV: test
+          DB_HOST: localhost
+          DB_PORT: '5432'
+          DB_NAME: navikid_test
+          DB_USER: postgres
+          DB_PASSWORD: test_password
 
       - name: Run integration tests
         run: npm run test:integration
