Upgrade Node.js version to 20 in CI configuration; implement in-memory rate limiting for login route; add linting and type-checking scripts; initialize Supabase client conditionally; update package dependencies.

--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "gradle:dependencies": "./gradlew dependencies",
     "gradle:dependencyUpdates": "./gradlew dependencyUpdates",
     "gradle:clean": "./gradlew clean",
-    "gradle:build": "./gradlew build"
+    "gradle:build": "./gradlew build",
+  "lint:progress": "node scripts/lint-perfile.cjs",
+  "typecheck:progress": "node scripts/run-typecheck.cjs"
   },
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
