--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "gradle:dependencyUpdates": "./gradlew dependencyUpdates",
     "gradle:clean": "./gradlew clean",
     "gradle:build": "./gradlew build",
-  "lint:progress": "node scripts/lint-perfile.cjs",
+  "lint:progress": "LINT_TIMEOUT_MS=30000 node scripts/lint-perfile.cjs",
+  "lint:single": "node scripts/run-lint.cjs",
   "typecheck:progress": "node scripts/run-typecheck.cjs"
   },
   "dependencies": {
