Refactor code structure for improved readability and maintainability

--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "test:fast": "npm run test:logic",
     "test:full": "npm run test:logic && jest __tests__",
     "test:concurrent": "bash ./scripts/run-tests-concurrent.sh",
-  "lint": "node ./scripts/lint-with-timeout.cjs",
-  "lint:timed": "node ./scripts/lint-with-timeout.cjs",
-  "lint:fast": "LINT_TIMEOUT_MS=60000 node ./scripts/lint-with-timeout.cjs --rule 'prettier/prettier:0' --rule 'react/jsx-filename-extension:0'",
-  "lint:full": "LINT_TIMEOUT_MS=180000 node ./scripts/lint-with-timeout.cjs",
-  "format:check": "npx prettier --check \"**/*.{ts,tsx,json,md}\"",
-  "format:check:ci": "npx prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\"",
+    "lint": "node ./scripts/lint-with-timeout.cjs",
+    "lint:timed": "node ./scripts/lint-with-timeout.cjs",
+    "lint:fast": "LINT_TIMEOUT_MS=60000 node ./scripts/lint-with-timeout.cjs --rule 'prettier/prettier:0' --rule 'react/jsx-filename-extension:0'",
+    "lint:full": "LINT_TIMEOUT_MS=180000 node ./scripts/lint-with-timeout.cjs",
+    "format:check": "npx prettier --check \"**/*.{ts,tsx,json,md}\"",
+    "format:check:ci": "npx prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "perf-check": "node ./tools/perfCheck.cjs",
     "demo:routing": "expo start --dev-client",
     "demo:offline": "node demo-offline-monitoring.js",
@@ -49,13 +49,15 @@
     "gradle:dependencyUpdates": "./gradlew dependencyUpdates",
     "gradle:clean": "./gradlew clean",
     "gradle:build": "./gradlew build",
-  "lint:progress": "LINT_TIMEOUT_MS=30000 node scripts/lint-perfile.cjs",
-  "lint:single": "node scripts/run-lint.cjs",
-  "typecheck:progress": "node scripts/run-typecheck.cjs"
+    "lint:progress": "LINT_TIMEOUT_MS=30000 node scripts/lint-perfile.cjs",
+    "lint:single": "node scripts/run-lint.cjs",
+    "typecheck:progress": "node scripts/run-typecheck.cjs",
+    "build": "tsc"
   },
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.3",
+    "@fastify/websocket": "^11.2.0",
     "@gorhom/bottom-sheet": "^5.2.6",
     "@maplibre/maplibre-react-native": "^10.2.1",
     "@nkzw/create-context-hook": "^1.1.0",
