--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "expo": "^54.0.23",
     "expo-application": "~7.0.7",
     "expo-audio": "^1.0.14",
+    "expo-battery": "^10.0.7",
     "expo-blur": "~15.0.7",
     "expo-camera": "^17.0.9",
     "expo-constants": "^18.0.10",
@@ -156,7 +157,7 @@
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.5",
     "tsx": "^4.20.6",
-    "typescript": "~5.9.2"
+    "typescript": "^5.9.3"
   },
   "private": true,
   "overrides": {}
