--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ yarn-error.*
 # local env files
 .env*.local
 
+/backend/supabase-ca.pem
 # typescript
 *.tsbuildinfo
 .vercel
@@ -99,3 +100,6 @@ coverage/
 /.env
 /backend/.env
 /backend/.env.local
+
+# Backend build output
+/backend/dist
