chore(lint): enhance backend ESLint configuration for improved module resolution and error handling

--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "test:full": "npm run test:logic && jest __tests__",
     "test:concurrent": "bash ./scripts/run-tests-concurrent.sh",
     "lint": "node ./scripts/lint-with-timeout.cjs",
-  "lint:frontend": "node ./scripts/lint-with-timeout.cjs app components hooks utils services src --ext .ts,.tsx --cache --cache-location .cache/eslint/frontend --max-warnings=0",
-  "lint:frontend:fast": "node ./scripts/lint-with-timeout.cjs app components hooks --ext .ts,.tsx --cache --cache-location .cache/eslint/frontend-fast --max-warnings=0",
+  "lint:frontend": "eslint app components hooks utils --ext .ts,.tsx --cache --cache-location .cache/eslint/frontend --max-warnings=0 --config eslint.config.frontend.cjs",
+  "lint:frontend:fast": "eslint app components hooks --ext .ts,.tsx --cache --cache-location .cache/eslint/frontend-fast --max-warnings=0 --config eslint.config.frontend.cjs",
   "lint:backend": "npm --prefix backend run lint",
   "lint:timed": "node ./scripts/lint-with-timeout.cjs",
   "lint:all": "npm run lint:frontend:fast && npm run lint:backend",
