--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "cross-env NODE_OPTIONS=\"--experimental-specifier-resolution=node\" expo start",
-    "preinstall": "node ./scripts/check-no-maps.cjs",
+  "preinstall": "node ./scripts/check-node-version.js && node ./scripts/check-no-maps.cjs",
     "start:clean": "rimraf node_modules/.cache .expo && expo start --clear",
     "start:web": "expo start --web",
     "start:ios": "expo start --ios",
@@ -29,14 +29,14 @@
     "test:full": "npm run test:logic && jest __tests__",
     "test:concurrent": "bash ./scripts/run-tests-concurrent.sh",
     "lint": "node ./scripts/lint-with-timeout.cjs",
-  "lint:frontend": "eslint app components hooks utils --ext .ts,.tsx --cache --cache-location .cache/eslint/frontend --max-warnings=0 --config eslint.config.frontend.cjs",
-  "lint:frontend:fast": "eslint app components hooks --ext .ts,.tsx --cache --cache-location .cache/eslint/frontend-fast --max-warnings=0 --config eslint.config.frontend.cjs",
-  "lint:backend": "npm --prefix backend run lint",
-  "lint:timed": "node ./scripts/lint-with-timeout.cjs",
-  "lint:all": "npm run lint:frontend:fast && npm run lint:backend",
+    "lint:frontend": "eslint app components hooks utils --ext .ts,.tsx --cache --cache-location .cache/eslint/frontend --max-warnings=0 --config eslint.config.frontend.cjs",
+    "lint:frontend:fast": "eslint app components hooks --ext .ts,.tsx --cache --cache-location .cache/eslint/frontend-fast --max-warnings=0 --config eslint.config.frontend.cjs",
+    "lint:backend": "npm --prefix backend run lint",
+    "lint:timed": "node ./scripts/lint-with-timeout.cjs",
+    "lint:all": "npm run lint:frontend:fast && npm run lint:backend",
     "lint:fast": "LINT_TIMEOUT_MS=60000 node ./scripts/lint-with-timeout.cjs --rule 'prettier/prettier:0' --rule 'react/jsx-filename-extension:0'",
     "lint:full": "LINT_TIMEOUT_MS=180000 node ./scripts/lint-with-timeout.cjs",
-  "lint:debug": "node tools/lint-debug.cjs",
+    "lint:debug": "node tools/lint-debug.cjs",
     "format:check": "npx prettier --check \"**/*.{ts,tsx,json,md}\"",
     "format:check:ci": "npx prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "perf-check": "node ./tools/perfCheck.cjs",
@@ -146,14 +146,17 @@
     "cross-env": "^10.1.0",
     "csv-parse": "^6.1.0",
     "eslint": "^9.39.1",
+    "eslint_d": "^14.3.0",
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "express": "^5.1.0",
+    "husky": "^8.0.3",
     "ioredis": "^5.8.2",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "jest-junit": "^16.0.0",
+    "lint-staged": "^14.0.0",
     "lru-cache": "^11.2.2",
     "metro-react-native-babel-preset": "^0.77.0",
     "prom-client": "^15.0.0",
@@ -162,9 +165,7 @@
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.5",
     "tsx": "^4.20.6",
-    "typescript": "^5.9.3",
-  "husky": "^8.0.3",
-  "lint-staged": "^14.0.0"
+    "typescript": "^5.9.3"
   },
   "prepare": "husky install",
   "lint-staged": {
