--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "cross-env NODE_OPTIONS=\"--experimental-specifier-resolution=node\" expo start",
-  "preinstall": "node ./scripts/check-node-version.js && node ./scripts/check-no-maps.cjs",
+  "preinstall": "node ./scripts/check-node-version.cjs && node ./scripts/check-no-maps.cjs",
     "start:clean": "rimraf node_modules/.cache .expo && expo start --clear",
     "start:web": "expo start --web",
     "start:ios": "expo start --ios",
