--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "strict": true,
-    "noImplicitAny": false,
+  "strict": true,
+  "noImplicitAny": true,
     "target": "ES2020",
     "module": "ESNext",
     "moduleResolution": "bundler",
