--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "test": "jest --runInBand",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+  "test:integration:local": "bash ../scripts/run-integration-local.sh",
     "lint": "eslint src --ext .ts --config ../eslint.config.backend.cjs",
     "lint:fast": "eslint \"src/**/*.{ts,tsx}\" --cache --cache-location .cache/eslint/backend-fast --config ../eslint.config.backend.cjs",
   "lint:ci": "ESLINT_TYPECHECK=true eslint src --ext .ts --max-warnings=0 --config ../eslint.config.backend.cjs",
