--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "test:all": "npm test && npm run test:server",
     "test:fast": "npm run test:logic",
     "test:full": "npm run test:logic && jest __tests__",
+  "test:integration:local": "bash ./scripts/run-integration-local.sh",
     "test:concurrent": "bash ./scripts/run-tests-concurrent.sh",
     "lint": "node ./scripts/lint-with-timeout.cjs",
     "lint:frontend": "eslint app components hooks utils --ext .ts,.tsx --cache --cache-location .cache/eslint/frontend --max-warnings=0 --config eslint.config.frontend.cjs",
