--- a/package.json
+++ b/package.json
@@ -171,7 +171,7 @@
   "prepare": "husky install",
   "lint-staged": {
     "*.{ts,tsx}": [
-      "eslint --cache --cache-location .cache/eslint/frontend-fast --config eslint.config.frontend.cjs"
+      "eslint_d --cache --cache-location .cache/eslint/frontend-fast --config eslint.config.frontend.cjs"
     ],
     "backend/**/*.{ts,tsx}": [
       "eslint_d --cache --cache-location .cache/eslint/backend-fast --ext .ts,.tsx --config eslint.config.backend.cjs"
