chore(lint): fall back to eslint for frontend staged files to avoid eslint_d daemon hangs

--- a/package.json
+++ b/package.json
@@ -171,7 +171,7 @@
   "prepare": "husky install",
   "lint-staged": {
     "*.{ts,tsx}": [
-      "eslint_d --cache --cache-location .cache/eslint/frontend-fast --config eslint.config.frontend.cjs --resolve-plugins-relative-to ."
+      "eslint --cache --cache-location .cache/eslint/frontend-fast --config eslint.config.frontend.cjs --max-warnings=0"
     ],
     "backend/src/**/*.{ts,tsx}": [
       "eslint_d --cache --cache-location .cache/eslint/backend-fast --ext .ts,.tsx --config backend/.eslintrc.cjs --resolve-plugins-relative-to ."
