chore: add eslint-formatter-unix (devDependency) and update lockfiles

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "cross-env NODE_OPTIONS=\"--experimental-specifier-resolution=node\" expo start",
-  "preinstall": "node ./scripts/check-node-version.cjs && node ./scripts/check-no-maps.cjs",
+    "preinstall": "node ./scripts/check-node-version.cjs && node ./scripts/check-no-maps.cjs",
     "start:clean": "rimraf node_modules/.cache .expo && expo start --clear",
     "start:web": "expo start --web",
     "start:ios": "expo start --ios",
@@ -27,7 +27,8 @@
     "test:all": "npm test && npm run test:server",
     "test:fast": "npm run test:logic",
     "test:full": "npm run test:logic && jest __tests__",
-  "test:integration:local": "bash ./scripts/run-integration-local.sh",
+    "migrate": "prisma migrate dev",
+    "test:integration:local": "bash ./scripts/run-integration-local.sh",
     "test:concurrent": "bash ./scripts/run-tests-concurrent.sh",
     "lint": "node ./scripts/lint-with-timeout.cjs",
     "lint:frontend": "eslint app components hooks utils --ext .ts,.tsx --cache --cache-location .cache/eslint/frontend --max-warnings=0 --config eslint.config.frontend.cjs",
@@ -102,7 +103,7 @@
     "expo-task-manager": "^14.0.8",
     "expo-updates": "~29.0.12",
     "expo-web-browser": "^15.0.9",
-    "glob": "^11.0.3",
+    "glob": "^11.1.0",
     "gtfs-realtime-bindings": "^1.1.1",
     "lucide-react-native": "^0.553.0",
     "nativewind": "^4.1.23",
@@ -148,6 +149,7 @@
     "csv-parse": "^6.1.0",
     "eslint": "^9.39.1",
     "eslint_d": "^14.3.0",
+    "eslint-formatter-unix": "^9.0.1",
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
